adelanto en requerimiento de mercancia

--- a/src/app/buscar-documentos/buscar-documentos.component.html
+++ b/src/app/buscar-documentos/buscar-documentos.component.html
@@ -254,10 +254,10 @@
             </div>
           </div>
           <div class="form-row">
-            <div class="form-group col-md-12 col-sm-1">
+            <div class="form-group  col-sm-12">
               Descripción corrección: 
             </div>
-            <div class="form-group col-md-12 col-sm-1">
+            <div class="form-group  col-sm-12">
               <textarea class="form-control " id="observacion" #observacion
                 placeholder="Descripción corrección"></textarea>
             </div>
