--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,8 +1,15 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="http://effectivesoftware.com.co/">
     <img src="../../assets/images/logo.ico" width="30" height="30" class="d-inline-block align-top" alt="">
-    Effective Facturación
-  </a>
+  </a> 
+  <div class="navbar-brand">
+    <select id="empresa" name="empresa" #empresa class="form-control"   (change)="cambiarEmpresa(empresa)">
+      <option *ngFor="let e of empresaList" [value]="e.empresa_id">
+        {{e.nombre}}
+      </option> 
+    </select>
+  </div>
+  
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
     aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -57,22 +64,22 @@
         </div>
       </div>
       <div class="dropdown">
-        <button class="btn btn-primary dropdown-toggle" id="contabilidadPV" #contabilidadPV type="button" data-toggle="dropdown"
-          aria-haspopup="true" aria-expanded="false" (keyup)="controlTeclas($event,contabilidadPV)">
-          Contabilidad
-        </button>
-        <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
-          <button class="dropdown-item" type="button" *ngFor="let opListados of contabilidad"
-            routerLink="{{opListados.url}}">{{opListados.nombre}}</button>
-        </div>
-      </div>
-      <div class="dropdown">
         <button class="btn btn-primary dropdown-toggle" id="listadosPV" #listadosPV type="button" data-toggle="dropdown"
           aria-haspopup="true" aria-expanded="false" (keyup)="controlTeclas($event,listadosPV)">
           Listados
         </button>
         <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
           <button class="dropdown-item" type="button" *ngFor="let opListados of listados"
+            routerLink="{{opListados.url}}">{{opListados.nombre}}</button>
+        </div>
+      </div>
+      <div class="dropdown">
+        <button class="btn btn-primary dropdown-toggle" id="contabilidadPV" #contabilidadPV type="button" data-toggle="dropdown"
+          aria-haspopup="true" aria-expanded="false" (keyup)="controlTeclas($event,contabilidadPV)">
+          Contabilidad
+        </button>
+        <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
+          <button class="dropdown-item" type="button" *ngFor="let opListados of contabilidad"
             routerLink="{{opListados.url}}">{{opListados.nombre}}</button>
         </div>
       </div>
