--- a/src/app/editar-producto/editar-producto.component.html
+++ b/src/app/editar-producto/editar-producto.component.html
@@ -98,7 +98,7 @@
         <div class="form-group col-md-6 col-sm-6">
           Fecha vencimiento
           <input class="form-control" id="vencimiento" placeholder="Fecha vencimiento" type="date" name="vencimiento"
-            #vencimiento [(ngModel)]="productoNew.fecha_vencimiento">
+            #vencimiento [value]="fechaI">
         </div>
       </div>
       <div class="form-row">
