--- a/src/app/components/info-movimiento/info-movimiento.component.html
+++ b/src/app/components/info-movimiento/info-movimiento.component.html
@@ -90,7 +90,7 @@
     <tbody>
       <tr *ngFor="let ordenes of dias">
         <th scope="row">
-          <button type="button"  class="btn btn-secondary btn-sm" data-toggle="modal"
+          <button type="button"  class="btn btn-secondary btn-sm" data-toggle="modal" (click)="cargarDetalle(ordenes)"
             data-target="#detalleModal">
             Detalle
           </button>
@@ -110,4 +110,56 @@
       </tr>
     </tbody>
   </table>
+
+
+  <!-- Modal -->
+<div class="modal fade" id="detalleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-xl">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Detalle del día</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <table class="table table-hover">
+          <thead>
+            <tr>
+              <th scope="col">Fecha</th>
+              <th scope="col">Cliente</th>
+              <th scope="col"># interno</th>
+              <th scope="col">Consecutivo DIAN</th>
+              <th scope="col">Total</th>
+              <th scope="col">Gravables 5%</th>
+              <th scope="col">Gravables 19%</th>
+              <th scope="col">Iva 5%</th>
+              <th scope="col">Iva 19%</th>
+              <th scope="col">Exento</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let d of detalles">
+              
+              <td>{{d.fecha_registro| date: 'dd/MM/yyyy'}}</td>
+              <td>{{nombreClienteFun(d.cliente_id)}}</td>
+              <td>{{d.documento_id}}</td>
+              <td>{{d.consecutivo_dian}}</td>
+              <td>{{formatearNumber(d.total)}}</td>
+              <td>{{formatearNumber(d.base_5)}}</td>
+              <td>{{formatearNumber(d.base_19)}}</td>
+              <td>{{formatearNumber(d.iva_5)}}</td>
+              <td>{{formatearNumber(d.iva_19)}}</td>
+              <td>{{formatearNumber(d.excento)}}</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+      
+      </div>
+    </div>
+  </div>
+</div>
 </div>
