--- a/src/app/components/requerimiento/requerimiento.component.html
+++ b/src/app/components/requerimiento/requerimiento.component.html
@@ -198,7 +198,7 @@
         </table>
         <div class="modal-footer">
           <button type="button" class="btn btn-primary" (click)=confirmarRequerimiento()>Confirmar</button>
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
           
         </div>
       </div>
