--- a/src/app/cuadre-caja/cuadre-caja.component.html
+++ b/src/app/cuadre-caja/cuadre-caja.component.html
@@ -33,7 +33,7 @@
                     Abonos del día
                 </div>
                 <div class="col col-md-3">
-                    <input class="form-control" [(ngModel)]="cuadreCajaVo.abonosDia" readonly>
+                    <input class="form-control" [(ngModel)]="cuadreCajaVo.abonos" readonly>
                 </div>
                 <div class="col col-md-3"></div>
                 <div class="col col-md-3"></div>
