--- a/src/app/components/gestion-orden/gestion-orden.component.html
+++ b/src/app/components/gestion-orden/gestion-orden.component.html
@@ -626,7 +626,7 @@
                 <b>Consecutivo DIAN: </b> {{documentoFactura.consecutivo_dian}}
               </div>
               <div class="form-row">
-                <b>Tipo documento: </b> {{documentoFactura.consecutivo_dian}}
+                <b>Tipo documento: </b> {{documentoFactura.tipo_documento_id}}
               </div>
             </div>
           </div>
@@ -770,11 +770,11 @@
               <div class="form-row">
                 <div class="form-group col-md-6 col-sm-1">
                   Fecha Inicial
-                  <input class="form-control" type="date" value="2020-01-01" id="fechaIniFactura" #fechaIniFactura>
+                  <input class="form-control" type="date" value="2021-01-01" id="fechaIniFactura" #fechaIniFactura>
                 </div>
                 <div class="form-group col-md-6 col-sm-1">
                   Fecha Final
-                  <input class="form-control" type="date" value="2020-12-31" id="fechaFinFactura" #fechaFinFactura>
+                  <input class="form-control" type="date" value="2021-12-31" id="fechaFinFactura" #fechaFinFactura>
                 </div>
               </div>
               <div class="form-row">
@@ -899,11 +899,11 @@
               <div class="form-row">
                 <div class="form-group col-md-6 col-sm-1">
                   Fecha Inicial
-                  <input class="form-control" type="date" value="2020-01-01" id="fechaInicial" #fechaInicial>
+                  <input class="form-control" type="date" value="2021-01-01" id="fechaInicial" #fechaInicial>
                 </div>
                 <div class="form-group col-md-6 col-sm-1">
                   Fecha Final
-                  <input class="form-control" type="date" value="2020-12-31" id="fechaFinal" #fechaFinal>
+                  <input class="form-control" type="date" value="2021-12-31" id="fechaFinal" #fechaFinal>
                 </div>
               </div>
               <div class="form-row">
