--- a/src/app/components/ventas-dia/ventas-dia.component.html
+++ b/src/app/components/ventas-dia/ventas-dia.component.html
@@ -369,7 +369,7 @@
                                 data-toggle="tooltip" title="" (keydown.enter)="enterTecla(tipoPagoPV)"
                                 (keydown.esc)="scapeTecla(tipoPagoPV)">
                         </div>
-                        <div class="col col-ms-6">
+                        <div class="col col-md-6">
                             <h6 class="d-none" #valorTipoPagoLavel name="valorTipoPagoLavel" id="valorTipoPagoLavel">
                                 Valor
                                 pago: </h6>
@@ -380,12 +380,18 @@
 
                     </div>
                     <div class="form-row " *ngFor="let tipos of tiposPagosDocumento">
-                        <div class="col col-ms-6">
+                        <div class="col col-md-6">
                             <h6>Tipo de Pago: {{nombreTipoPago(tipos.tipo_pago_id) }} </h6>
 
                         </div>
-                        <div class="col col-ms-6">
-                            <h6>Valor pago: {{tipos.valor }} </h6>
+                        <div class="col col-md-4">
+                            <h6>Valor: {{formatearNumber(tipos.valor) }} </h6>
+                        </div>
+                        <div class="col col-ms-2">
+                            <button type="button" class="btn btn-outline-danger" id="{{tipos.tipo_pago_id}}" 
+                            (click)="eliminarTipoPago(tipos)">
+                            <i class="fas fa-trash-alt"></i>
+                        </button>
                         </div>
                     </div>
                     <div class="form-row ">
