--- a/src/app/components/reporte-terceros/reporte-terceros.component.html
+++ b/src/app/components/reporte-terceros/reporte-terceros.component.html
@@ -7,29 +7,49 @@
   <div class="form-row">
     <div class="form-group col-md-4 ">
       Fecha Inicial
-      <input class="form-control" type="date" [value]="2020-12-31" id="fechaIni" #fechaIni>
+      <input class="form-control" type="date" value="2020-01-01" id="fechaIni" #fechaIni>
     </div>
     <div class="form-group col-md-4 ">
       Fecha Final
       <input class="form-control" type="date" value="2020-12-31" id="fechaFin" #fechaFin>
     </div>
+    <div class="form-group col-md-4 col-sm-12 ">
+      <div class="form-row">
+        <b>Total: $</b> {{formatearNumber(total)}}
+      </div>
+      <div class="form-row">
+        <b>Total Gravable 5%: $</b>{{formatearNumber(gravable_5)}}
+      </div>
+      <div class="form-row">
+        <b>Total Gravable 19%: $</b>{{formatearNumber(gravable_19)}}
+      </div>
+      <div class="form-row">
+        <b>Total iva 5%: $</b>{{formatearNumber(iva_5)}}
+      </div>
+      <div class="form-row">
+        <b>Total iva 19%: $</b>{{formatearNumber(iva_19)}}
+      </div>
+      <div class="form-row">
+        <b>Exento: $</b>{{formatearNumber(exento)}}
+      </div>
+    </div>
   </div>
   <div class="form-row">
     <div class="form-group col-md-4 ">
       Monto desde
-      <input class="form-control" type="number"  id="montoDesde" #montoDesde>
+      <input class="form-control" type="number" id="montoDesde" #montoDesde>
     </div>
     <div class="form-group col-md-4 ">
       Monto hasta
-      <input class="form-control" type="number"  id="montoHasta" #montoHasta>
+      <input class="form-control" type="number" id="montoHasta" #montoHasta>
     </div>
   </div>
   <div class="form-row">
     <div class="form-group col-md-4 ">
       Tipo tercero
-      <select id="empresa" name="empresa" #empresa class="form-control">
-        <option  value="1"> Cliente</option>
-        <option  value="1"> Proveedor</option>
+      <select id="empresa" name="tipoTercero" #tipoTercero class="form-control">
+        <option value="1"> Cliente</option>
+        <option value="2"> Proveedor</option>
       </select>
     </div>
     <div class="form-group col-md-4 ">
@@ -41,5 +61,45 @@
         </option>
       </select>
     </div>
+
   </div>
+  <div class="form-row">
+    <button type="button" class="btn btn-primary mb-2" (click)="calcular()">Buscar</button>
+    <button type="button" class="btn btn-primary ml-1 mb-2" (click)="exportTableToExcel()">Exportar</button>
+  </div>
+  <table class="table table-hover">
+    <thead>
+      <tr>
+        <th scope="col">Nombre</th>
+        <th scope="col">Identificación</th>
+        <th scope="col">Total</th>
+        <th scope="col">Gravables 5%</th>
+        <th scope="col">Gravables 19%</th>
+        <th scope="col">Iva 5%</th>
+        <th scope="col">Iva 19%</th>
+        <th scope="col">Exento</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let ordenes of terceros">
+        <th scope="row">
+          {{ordenes.nombre}}
+        </th>
+        <td>{{ordenes.documento}}</td>
+        <td>{{formatearNumber(ordenes.total)}}</td>
+        <td>{{formatearNumber(ordenes.base_5)}}</td>
+        <td>{{formatearNumber(ordenes.base_19)}}</td>
+        <td>{{formatearNumber(ordenes.iva_5)}}</td>
+        <td>{{formatearNumber(ordenes.iva_19)}}</td>
+        <td>{{formatearNumber(ordenes.exento)}}</td>
+      </tr>
+    </tbody>
+  </table>
+
+  <div class="col col-ms-1">
+    <a href="#" name="downloadZipLink" #downloadZipLink id="downloadZipLink" download>
+    </a>
+  </div>
+
+
 </div>
