ajuste en impresion punto de venta dia

--- a/src/app/components/ventas-dia/ventas-dia.component.html
+++ b/src/app/components/ventas-dia/ventas-dia.component.html
@@ -336,6 +336,11 @@
                     </div>
                     <div class="form-row ">
                         <div class="col col-ms-12 ">
+                            <h6>Saldo: {{formatearNumber(saldoTipoPago )}}</h6>
+                        </div>
+                    </div>
+                    <div class="form-row ">
+                        <div class="col col-ms-12 ">
                             <h6 #descuentoLavel name="descuentoLavel" id="descuentoLavel" class="d-none">Descuento:
                             </h6>
                             <input name="descuentoPV" #descuentoPV placeholder="Descuento" class="form-control d-none"
