ajuste en requerimiento de mercancia

--- a/src/app/components/requerimiento/requerimiento.component.html
+++ b/src/app/components/requerimiento/requerimiento.component.html
@@ -141,7 +141,7 @@
         <div class="modal-body">
           <div class="form-row">
             <div class="form-group col-md-8 col-sm-12">
-              Empresa Que solicita: 
+              Empresa Que solicita: {{empresaSolicita}}
             </div>
             <div class="form-group col-md-4 col-sm-12">
               Total: {{total}}
