--- a/src/app/components/ventas-dia/ventas-dia.component.html
+++ b/src/app/components/ventas-dia/ventas-dia.component.html
@@ -141,7 +141,7 @@
                 (click)="teclaAnteriorSiguiente('u')">Ultima</button>
         </div>
         <div class="form-group col-md-1 col-sm-4" id="divBuscar" #divBuscar>
-            <button type="button" class="btn btn-primary btn-sm" id="buscarPV" #buscarPV
+            <button type="button" class="btn btn-primary btn-sm" id="buscarPV" #buscarPV data-toggle="modal" data-target="#buscarDocumentoXFech"
                 (keyup)="controlTeclas($event,buscarPV)" (keyup.enter)="enterTecla(buscarPV)">Buscar</button>
         </div>
         <div class="form-group col-md-1 col-sm-4" id="divModificar" #divModificar>
