--- a/src/app/components/traslado/traslado.component.html
+++ b/src/app/components/traslado/traslado.component.html
@@ -105,7 +105,7 @@
       <div class="modal-body">
         <div class="form-row">
           <div class="form-group col-md-8 col-sm-12">
-            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#BuscarRequerimientoModal">
+            <button type="button" class="btn btn-primary" (click)="buscarRequerimiento(empresaOrigenCrear)">
               Buscar Requerimiento de traslado
             </button>
           </div>
@@ -308,8 +308,7 @@
           </table>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
         </div>
       </div>
     </div>
