--- a/src/app/components/control-inventario/control-inventario.component.html
+++ b/src/app/components/control-inventario/control-inventario.component.html
@@ -6,7 +6,7 @@
   <br />
 
   <div class="form-row">
-    <button type="button" class="btn btn-primary ml-2" (click)="exportTableToExcel(tblData)">Exportar </button>
+    <button type="button" class="btn btn-primary ml-2" >Exportar </button>
     <br />
     <table class="table table-hover" id="tblData" #tblData>
       <thead>
